# lumen

./: .env.tpl  .gitignore  CLAUDE.md  README.md
.claude/agents/: architect.md  design-reviewer.md  doc-writer.md  planner.md
.claude/hooks/: README.md  pre-commit-review-check.py
.claude/rules/: code-review.md  design-workflow.md  development-workflow.md  languages.md
apps/api/: .env.example  main.py  pyproject.toml
apps/api/app/core/: config.py  deps.py  sse.py  utils.py
apps/api/app/db/: sqlite.py
apps/api/app/models/: events.py
apps/api/app/routers/: research.py
apps/api/app/services/: inject_directive.py  langgraph_protocol.py  langgraph_service.py  session_manager.py
apps/api/app/services/graph/: __init__.py  planner.py  researcher.py  routing.py  state.py  writer.py
apps/api/data/: demo_session.json
apps/api/tests/: conftest.py  test_config.py  test_db_sqlite.py  test_demo_replay.py  test_graph_routing.py  test_langgraph_protocol.py  test_langgraph_service.py  test_main.py  test_main_lifespan.py  test_models_events.py  test_prerender_script.py  test_release_smoke.py  test_research_router.py  test_router_inject.py  test_runbook_smoke.py  test_session_lifecycle.py  test_sse_inject.py  test_sse_replay.py  test_sse_wire_format.py
apps/api/tests/fixtures/: event_samples.json  streamevent_samples.json
apps/web/: .env.local.example  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
docs/: COMPONENT-CATALOG.md  FEATURE-CATALOG.md
docs/architecture/: ADR-INDEX.md
scripts/: prerender_demo_session.py
(+75 files in other folders)
