[project]
name = "lumen-api"
version = "0.1.0"
description = "Lumen Deep Research API — FastAPI + LangGraph backend"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "dashscope>=1.25.17",
    "fastapi>=0.136.0",
    "firecrawl-py>=4.22.2",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.32",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

